fix: set scrollbar-gutter stable

--- a/src/client/theme-default/styles/base.css
+++ b/src/client/theme-default/styles/base.css
@@ -23,6 +23,7 @@
     line-height: 1.4;
     font-size: 16px;
     -webkit-text-size-adjust: 100%;
+    scrollbar-gutter: stable;
   }
 
   html.dark {
